--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,25 +1,25 @@
-:root{
-    --texto: rgba(255,255,255,.7);
-    --blanco:#fff;
-    --input:#3a3b3c;
-    --input-hover:#4b4d4e;
-    --activo:#2d88ff;
-    --gris-claro:#b0b3b8;
-    --fondo-contenido:#242526;
+:root {
+    --texto: rgba(255, 255, 255, .7);
+    --blanco: #fff;
+    --input: #3a3b3c;
+    --input-hover: #4b4d4e;
+    --activo: #2d88ff;
+    --gris-claro: #b0b3b8;
+    --fondo-contenido: #242526;
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     background: #18191a;
     color: var(--texto);
 }
 
-a{
+a {
     color: var(--texto);
     text-decoration: none;
 }
@@ -31,37 +31,71 @@ a{
 /* ------HEADER------ */
 /* ------------------ */
 
-header{
+header {
     background: var(--fondo-contenido);
 }
 
-header .logo{
+header .logo {
     display: inline-block;
 }
 
-header .logo svg{
+header .logo svg {
     color: var(--blanco);
     height: 35px;
     width: 35px;
 }
 
-header .barra-busqueda{
+header .barra-busqueda {
     position: relative;
     width: 100%;
 }
-header .barra-busqueda input{
+
+header .barra-busqueda input {
     width: 100%;
     border: none;
     background: var(--input);
-    color:var(--texto);
+    color: var(--texto);
     height: 40px;
-    border-radius:100px;
+    border-radius: 100px;
     padding: 0 20px 0 40px;
 }
 
-header .barra-busqueda .icono{
+header .barra-busqueda .icono {
     position: absolute;
     top: 6px;
     left: 15px;
     color: var(--texto);
+}
+
+
+
+/* Menu Principal  */
+header .menu a {
+    display: inline-block;
+    padding: 10px 40px;
+}
+
+header .menu a:hover {
+    color: var(--texto);
+    background: var(--input);
+    border-radius: 5px;
+}
+
+header .menu a svg {
+    width: 25px;
+    height: 25px;
+}
+
+header .menu .active {
+    border-bottom: 4px solid var(--activo);
+    color: var(--activo);
+
+}
+
+header .menu .active:hover {
+
+    background: none;
+    border-radius: 0px;
+    color: var(--activo);
+
 }
