--- a/css/estilos.css
+++ b/css/estilos.css
@@ -134,13 +134,61 @@ header .botones .perfil img{
 
 
 
+/* Aside  */
+
+aside{
+    height: 100vh;
+    overflow: hidden;
+    padding-top: 60px;
+}
+
+/* Aside Enlaces Rapidos  */
+
+.enlaces-rapidos > nav a{
+    display: flex;
+    align-items: center;
+    color: var(--blanco);
+    padding: 10px 10px;
+    border-radius: 3px;
+}
 
 
+.enlaces-rapidos > nav a:hover{
+    background: var(--input-hover);
+}
+
+.enlaces-rapidos .perfil img{
+    width: 30px;
+    height: 30px;
+    border-radius: 100px;
+    margin-right: 10px;
+}   
+
+.enlaces-rapidos .icono{
+    margin-right: 20px;
+}
+
+.enlaces-rapidos .icono svg{
+    height: 20px;
+    width: 20px;
+}
 
 
+/* Footer  */
+footer{
+    padding: 40px 0;
+}
 
+footer nav a {
+    font-size: 14px;
+    margin-right: 7px;
+    color: var(--gris-claro);
+}
 
-
+footer nav a:hover {
+    text-decoration: underline;
+    color: var(--gris-claro);
+}
 
 
 
@@ -155,7 +203,11 @@ header .botones .perfil img{
 @media screen and (max-width:576px){}
 
 /* Dispositivo md  */
-@media screen and (max-width:768px){}
+@media screen and (max-width:768px){
+    .enlaces-rapidos {
+        display: none;
+    }
+}
 
 /* Dispositivo lg */
 @media screen and (max-width:992px){
@@ -165,6 +217,10 @@ header .botones .perfil img{
 
     .menu{
         margin-top: 10px;
+    }
+
+    aside{
+        padding-top: 130px;
     }
 }
 
