--- a/css/estilos.css
+++ b/css/estilos.css
@@ -235,6 +235,69 @@ footer nav a:hover {
     margin-right: 10px;
 }
 
+
+/* MAIN  */
+
+main{
+    padding-top: 70px;
+}
+
+main .publicar{
+    background: var(--fondo-contenido);
+    width: 100%;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    padding: 10px;
+}
+
+main .publicar .formulario{
+    display: flex;
+}
+
+main .foto {
+    display: block;
+    width: 40px;
+    height: 40px;
+    overflow: hidden;
+    border-radius: 100px;
+    margin-right: 10px
+}
+
+main .foto img{
+    width: 100%;
+}
+
+main .publicar .formulario input{
+    width: 100%;
+    border: none;
+    background: var(--input);
+    height: 40px;
+    border-radius: 100px;
+    padding: 0 20px;
+    color: var(--texto);
+}
+
+main .publicar .botones a{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 10px;
+    border-radius: 3px;
+}
+
+main .publicar .botones a:hover{
+    background: var(--input-hover);
+    color:var(--texto)
+}
+
+main .publicar .botones a svg{
+    margin-right: 7px;
+}
+
+
+
+
 /* Dispositivo sm  */
 @media screen and (max-width:576px){}
 
@@ -263,7 +326,7 @@ footer nav a:hover {
         margin-top: 10px;
     }
 
-    aside{
+    aside,main{
         padding-top: 130px;
     }
 }
